--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
                             Hello, my name is Cameron Gomes. I am a recent graduate of Curry College with a major in Information Technology and a minor in Cybersecurity. <br> <br>
                             While in school I also took time to learn about personal finance and the stock market. I gained a large interest in these fields which eventually led me to
                             learning about stock options trading. Trading stocks options became another source of income for me throughout college.<br><br>
-                             Upon graduaiton I took some time to think about where
+                             Upon graduation I took some time to think about where
                             I was at financially and realized that I was in a very good spot. I have always enjoyed being creative and turning some of my ideas into products.
                             I have always wanted to create my own mobile application and decided that after graduaiton was the perfect time for me to start.
                             The application, Crosshair Sports, is now complete and available to download from the AppStore. <br><br>
                             While working on the application, I have gained experience working with Adobe's Adobe XD design tool as well as Google's Flutter development kit and Firebase software. <br><br>
                            
-                            The process of creating my own applicatiaon has given me confidence in myself and my abilities. I feel like that there's is no reason why I could not learn how to use any tool or software.
+                            The process of creating my own application has given me confidence in myself and my abilities. I feel like that there is no reason why I cannot learn how to use any tool or software.
                             Creating this application has helped me develop technical skills but also grow as a person. 
                             <br><br>
                             Thank you for taking the time to visit my portfolio and look at some of my work. Hope you enjoy!
