--- a/index.html
+++ b/index.html
@@ -236,13 +236,13 @@
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title">Co-Founder & Lead Developer - <span class="place"><a href="#">Crosshair Sports</a></span> <span class="year">(2022 - Present)</span></h3>
+                                <h3 class="title">Co-Founder & Lead Developer - <span class="place"><a href="#">Crosshair Sports</a></span> <span class="year">(June, 2021 - Present)</span></h3>
                                 <p>Designed user interface of mobile application and webpage using the Adobe XD software. Programmed the mobile application in Visual Studio Code while using the language Dart and Flutter framework.
                                     Connected the application to a Firestore database using the Firebase software provided by Google. ,</p>
                             </div><!--//item-->
 
                             <div class="item">
-                                <h3 class="title">Mobile App Developer - <span class="place"><a href="#">Gold Standard Basketball Training</a></span> <span class="year">(November,2019 - Present)</span></h3>
+                                <h3 class="title">Mobile App Developer - <span class="place"><a href="#">Gold Standard Basketball Training</a></span> <span class="year">(March, 2022 - Present)</span></h3>
                                 <p>		Designed the user interface of the mobile application using the Adobe XD software.
                                     	Main goal was to incorporate features from the website (goldstandardhoops.com), into a mobile application.
                                     	Programmed the application in Dart and the Flutter framework using Visual Studio Code.
@@ -252,7 +252,7 @@
                             </div><!--//item-->
 
                             <div class="item">
-                                <h3 class="title">Junior AV/IT Technician - <span class="place"><a href="#">REnVisioning Technology, LLC</a></span> <span class="year">(March,2022 - Present)</span></h3>
+                                <h3 class="title">Junior AV/IT Technician - <span class="place"><a href="#">REnVisioning Technology, LLC</a></span> <span class="year">(March, 2022 - Present)</span></h3>
                                 <p>		Pulled low voltage cabling through conduit and other locations. 
                                         Safely and Securely mounting equipment such as displays, projectors, cameras, racking equipment, etc.
                                      	Terminated Connectors of various connections.
