--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                             </div><!--//item-->
 
                             <div class="item">
-                                <h3 class="title">Shift Supervisor - <span class="place"><a href="#">CVS</a></span> <span class="year">(August, 2017 - February 2022)</span></h3>
+                                <h3 class="title">Shift Supervisor - <span class="place"><a href="#">CVS</a></span> <span class="year">(August 2017 - February 2022)</span></h3>
                                 <p>	Responsible for managing shifts to consistently deliver the highest standards of quality, service, and efficiency. 
                                     	Ensure all POS systems are functioning properly by running daily maintenance checks. 
                                     	Maintain accurate count and deposit of all tills during each shift.
